[package]
name = "discord_bot"
version = "0.1.0"
authors = ["August Lounibos <augustbbl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serenity = "0.10.2"
shell-words = "1.0"
structopt = { version = "0.3", features = ["yaml"] }
tokio = { version = "1.1", features = ["rt", "rt-multi-thread"] }
toml = "0.5"
